@@ -1,4 +1,10 @@
-Sat Nov 19 17:34:51 EET 2005  Pekka Riikonen <priikone@silcnet.org>
+Sun Nov 20 19:13:35 EET 2005 Pekka Riikonen <priikone@silcnet.org>
+
+	* Removed callback system from SilcMimeAssembler.  Return
+	  the multipart type in silc_mime_get_multiparts.  Affected
+	  files are lib/silcutil/silcmime.[ch].
+
+Sat Nov 19 17:34:51 EET 2005 Pekka Riikonen <priikone@silcnet.org>
 
 	* Added SilcMime API to lib/silcutil/silcmime.[ch].  The old
 	  silc_mime_parse is available but deprecated.
